[package]
name = "transmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.5"
regex = { version = "1.7.0" }
regex-macro = "0.2.0"
tl = "0.7.7"
